Simplified PLOOP processing rules.